[package]
name = "mmap-loader"
authors = ["Andrew Buck"]
description = "A Portable Executable manual map loader"
documentation = "https://docs.rs/crate/mmap-loader"
version = "0.4.4"
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/MrElectrify/mmap-loader-rs"
keywords = ["pe", "map", "manual-map"]

[features]
tls = ["tonic/tls", "tonic/tls-roots"]
server = []

[[bin]]
name = "mmap-offset-server"
path = "src/offset-server.rs"
required-features = ["server"]

[profile.release]
codegen-units = 1
panic = "abort"
lto = true

[[example]]
name = "print_return"
path = "examples/print_return.rs"

[[example]]
name = "print_return_tls"
path = "examples/print_return_tls.rs"
required-features = ["tls"]

[[example]]
name = "print_return_with_dll"
path = "examples/print_return_with_dll.rs"

[[example]]
name = "print_return_no_server"
path = "examples/print_return_no_server.rs"

[build-dependencies]
tonic-build = "0.6"

[dependencies]
anyhow = "1"
lazy_static = "1.4"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
memoffset = "0.6"
ntapi = { version = "0.3", git = "https://github.com/MrElectrify/ntapi", features = ["beta"] }
pdb = "0.7"
prost = "0.9"
reqwest = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = { version = "2.1" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread"] }
tonic = "0.6"
winapi = { version = "0.3", features = ["impl-default", "fileapi", "guiddef", "handleapi", "memoryapi", "std", "winbase"] }

[dev-dependencies]
serial_test = "0.5"

[package.metadata.docs.rs]
features = ["server"]
targets = ["x86_64-pc-windows-gnu", "x86_64-unknown-linux-gnu"]