[package]
name = "mmap-loader"
authors = ["Andrew Buck"]
description = "A Portable Executable manual map loader"
documentation = "https://docs.rs/crate/mmap-loader"
version = "0.5.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/MrElectrify/mmap-loader-rs"
keywords = ["pe", "map", "manual-map"]

[features]
server = []

[[bin]]
name = "mmap-offset-server"
path = "src/offset-server.rs"
required-features = ["server"]

[profile.release]
codegen-units = 1
panic = "abort"
lto = true

[[example]]
name = "print_return"
path = "examples/print_return.rs"

[[example]]
name = "print_return_tls"
path = "examples/print_return_tls.rs"

[[example]]
name = "print_return_with_dll"
path = "examples/print_return_with_dll.rs"

[[example]]
name = "print_return_no_server"
path = "examples/print_return_no_server.rs"

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }

[dependencies]
anyhow = "1"
lazy_static = "1.4"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
memoffset = "0.9"
ntapi = "0.4"
pdb = "0.8"
prost = "0.12"
reqwest = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = { version = "4.3" }
thiserror = "1.0"
tokio = { version = "1.37", features = ["fs", "macros", "rt-multi-thread"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
winapi = { version = "0.3", features = ["impl-default", "fileapi", "guiddef", "handleapi", "memoryapi", "std", "winbase", "ntdef", "ntstatus", "libloaderapi", "winnt"] }

[dev-dependencies]
serial_test = "3.0"

[package.metadata.docs.rs]
features = ["server"]
targets = ["x86_64-pc-windows-gnu", "x86_64-unknown-linux-gnu"]
